adding salad page

--- a/recipes/Salad.html
+++ b/recipes/Salad.html
@@ -3,42 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sushi</title>
+    <title>Salad</title>
 </head>
 <body>
-    <img src="https://www.allrecipes.com/thmb/6pbOJO6p5wgMAMfAFBMH4vJNlkw=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/19511smoked-salmon-sushi-rollfabeveryday4x3-159a22b4d3ac49fe9a146db94b53c930.jpg"> 
-    <H2>Smoked Salmon Sushi Rolr</H2>
-    <p>Homemade salmon roll made with sushi rice, nori, and smoked salmon. This is a very basic and easy recipe for making sushi. It might take a while to learn how to make a perfect roll, but you'll have fun trying! Add wasabi (Japanese horseradish) for a good kick!</p>
+    <img src="https://www.allrecipes.com/thmb/9PRA0-snvSTz2Ot8TaZ8fI_shrE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8536918-Copycat-KFC-Coleslaw-4x3-1-b55263f8b2514c4a9c5c6cf16637964c.jpg"> 
+    <H2>Coleslaw Salad</H2>
+    <p>For a slaw that looks similar to what you'd find at KFC, we suggest chopping the coleslaw mix before mixing with the dressing.</p>
     <h3>Ingredients</h3>
     <ul>
         <li>
-            Japanese sushi rice
+            1 (14 ounce) package coleslaw mix
         </li>
         <li>
-            Rice wine vinegar
+            ¼ cup finely chopped yellow onion
         </li>
         <li>
-            Dry Seaweed(Nori)
+            ½ cup mayonnaise
         </li>
         <li>
-            Wasabi Paste
+            ¼ cup sugar
         </li>
         <li>
-            Smoked Salmon(long stripes)
+            2 tablespoons milk
         </li>
         <li>
-            cucumber(peeled and Sliced)
+            2 tablespoons buttermilk
         </li>
         <li>
-            Avocado(pitted, peeled and sliced)
+            2 tablespoons white wine vinegar
+        </li>
+        <li>
+            ½ teaspoon salt
+        </li>
+        <li>
+            ⅛ teaspoon black pepper
         </li>
     </ul>
     <ol>
-        <li>Soak rice for 4 hours. Drain rice and cook in a rice cooker with 2 cups of water. Rice must be slightly dry as vinegar will be added later.</li>
-        <li>Immediately after rice is cooked, mix in rice wine vinegar; spread rice on a plate until completely cool.</li>
-        <li>Place 1 sheet of seaweed on a bamboo mat; press a thin layer of cool rice on seaweed, leaving at least a 1/2 inch top and bottom edge of the seaweed uncovered. This is for easier sealing later. Dot some wasabi on rice; arrange smoked salmon, cucumber, and avocado on rice about 1 inch away from the bottom edge of seaweed.
-        </li>
-        <li>Slightly wet the top edge of seaweed; roll up tightly from the bottom to the top edge with the help of the bamboo mat. Cut salmon roll into 8 equal pieces and serve. Repeat for other rolls.</li>
+        <li>Stir together coleslaw mix and onion in a large bowl.</li>
+        <li>Whisk together mayonnaise, sugar, milk, buttermilk, vinegar, salt, and pepper in a second bowl until smooth. Pour dressing over slaw; stir well and chill at least 2 hours or up to overnight.</li>
+        
     </ol>
     <a href="../index.html">Home Page</a>
 </body>
